--- a/scss/common/_report-grid.scss
+++ b/scss/common/_report-grid.scss
@@ -1,6 +1,8 @@
 table.report-grid {
-  /* Ensure height enough for spinner. For tables, height acts as min-height. */
+  /* Ensure height enough for spinner. For tables, height acts as min-height
+  as long as overflow-x not set. */
   height: 140px;
+  overflow-x: initial;
   tr {
     /* Odd row colouration */
     &.odd {
